# GeoMagic

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
app/: main.py
lib/geocode/: geocoder.py
lib/wikipedia/: wikipedia.py
lib/wikipedia/models/: wikipedia_api_article.py  wikipedia_article.py
