[tool.poetry]
name = "geomagic"
version = "0.1.0"
description = ""
authors = ["Ethan Johnston <davidethanj11@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.10.1"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
